2004-06-09  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: several versions of libcroco can now be
	installed in parallel. We compile and link against the 0.6.xx serie.

2004-06-08  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c, rsvg-styles.c: made stop colours inheritable
	* rsvg-filter.c: made gaussian blurring better looking by weighting by alpha
	* rsvg-pattern.c: made patterns able to link to others

2004-06-08  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg.c, rsvg-paint-server.c: added pattern support
	* rsvg-shapes.c: return the value of the new group created when pushing defs groups
	* rsvg-css.c: fixed problem caused when there are multiple seperating charactors between two elements in a list
	* rsvg-filter.c: fixed the constant term in colour matricies.
	
2004-06-06  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Back out elementNs functions. They're not needed after all.
	* test-display.c: Save the input SVG to a file. Better printing code - scales nicely, preserves aspect-ratio
	
2004-06-07  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-css.c: fixed css to break strings on the LAST colon rather than the fist one. This allows namespaces to work once more!!!
	
2004-06-06  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter, rsvg-styles.c: added adobe blending modes, still does not work because of namespace issues
	* rsvg.c: got rid of the whole defs handler thing, it was unnecisarry. Now just use ctx->in_defs for everything.

2004-06-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter: optimised bounding box calculation, optimised colour chanel skipping, made feTile work in some cases (when it is used after another properly modified primitive)
	
2004-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c: fixed bug 139268

2004-05-28  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-css.c: fixed typos in css colour definitions

2004-05-15  Caleb Moore <c.moore@student.unsw.edu.au>
